# astroarch-bridge

./: .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
astroarch_bridge/: __init__.py  __main__.py  app.py  auth.py  config.py  deps.py  splash.py  state.py
astroarch_bridge/images/: __init__.py  processor.py  watcher.py
astroarch_bridge/indi/: __init__.py  client.py  properties.py  protocol.py
astroarch_bridge/phd2/: __init__.py  client.py
astroarch_bridge/routes/: _roles.py  align.py  camera.py  capture_ekos.py  files.py  filter_wheel.py  focuser.py  focuser_ekos.py  guide.py  indi_panel.py  mount.py  observation.py  observatory.py  scheduler.py  setup.py  skymap.py  system.py
astroarch_bridge/ws/: __init__.py  frame_stream.py  hub.py  state_stream.py
deploy/: PKGBUILD  astroarch-bridge.service  install.sh
desktop_dashboard/: AstroarchBridge.desktop  astroarch_bridge_dashboard.py  generate_locales.sh
desktop_dashboard/locales/: base.pot
desktop_dashboard/locales/de/LC_MESSAGES/: base.mo  base.po
desktop_dashboard/locales/es/LC_MESSAGES/: base.mo  base.po
desktop_dashboard/locales/fr/LC_MESSAGES/: base.mo  base.po
desktop_dashboard/locales/it/LC_MESSAGES/: base.mo  base.po
scripts/: README.md  backup_rpi.sh  install_deps_pacman.sh
tests/: conftest.py  test_config.py  test_indi_protocol.py  test_state.py
