[project]
name = "astroarch-bridge"
version = "0.3.0"
description = "Bridge daemon for Astroarch Interface (Android app) - live clone di INDI/Ekos/PHD2 via REST + WebSocket"
authors = [{name = "Zarletti-Osservatorio Jupiter"}]
license = {text = "MIT"}
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "astropy==6.1.4",
    "fastapi==0.115.0",
    "numpy==2.1.2",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-multipart==0.0.12",
    "uvicorn[standard]==0.32.0",
    "watchdog==5.0.3",
    "websockets==13.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["astroarch_bridge*"]

[dependency-groups]
development = [
    "httpx==0.27.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[project.scripts]
astroarch-bridge = "astroarch_bridge.__main__:main"
